; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/ocxl/extr_core.c_ocxl_fn_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/ocxl/extr_core.c_ocxl_fn_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocxl_fn = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ocxl_fn* (%struct.ocxl_fn*)* @ocxl_fn_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ocxl_fn* @ocxl_fn_get(%struct.ocxl_fn* %0) #0 {
  %2 = alloca %struct.ocxl_fn*, align 8
  store %struct.ocxl_fn* %0, %struct.ocxl_fn** %2, align 8
  %3 = load %struct.ocxl_fn*, %struct.ocxl_fn** %2, align 8
  %4 = getelementptr inbounds %struct.ocxl_fn, %struct.ocxl_fn* %3, i32 0, i32 0
  %5 = call i32* @get_device(i32* %4)
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %10

8:                                                ; preds = %1
  %9 = load %struct.ocxl_fn*, %struct.ocxl_fn** %2, align 8
  br label %10

10:                                               ; preds = %8, %7
  %11 = phi %struct.ocxl_fn* [ null, %7 ], [ %9, %8 ]
  ret %struct.ocxl_fn* %11
}

declare dso_local i32* @get_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
